@@ -3,6 +3,9 @@
 	Backported from mainline
 	2013-05-27  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/57396
+	* gfortran.fortran-torture/execute/pr57396.f90: New testcase.
+
 	PR tree-optimization/57343
 	* gcc.dg/torture/pr57343.c: New testcase.
 
